周四的内容

--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,37 +1,39 @@
 <!--index.wxml-->
-<view class="container index">
-  <image src='/static/img/loading.svg' class="loading" wx:if="{{isLoading}}"></image>
-  <view wx:else>
-    <swiper indicator-dots="{{indicatorDots}}"
-    autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}">
-    <block wx:for="{{swiperData}}" wx:key="{{index}}" >
-      <swiper-item bindtap="jumpBook" data-id="{{item.book._id}}">
-        <image src="{{item.img}}" class="slide-image" />
-      </swiper-item>
-    </block>
-    </swiper>
+<view>
+  <view class="container index">
+    <image src='/static/img/loading.svg' class="loading" wx:if="{{isLoading}}"></image>
+    <view wx:else>
+      <swiper indicator-dots="{{indicatorDots}}"
+      autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}">
+      <block wx:for="{{swiperData}}" wx:key="{{index}}" >
+        <swiper-item bindtap="jumpBook" data-id="{{item.book._id}}">
+          <image src="{{item.img}}" class="slide-image" />
+        </swiper-item>
+      </block>
+      </swiper>
 
-    <view class="main-content">
-      <view class="content-item" wx:for="{{mainContent}}" wx:key="index">
-        <view class="title">
-          {{item.title}}
-        </view>
-        <view class="content" wx:for="{{item.books}}" wx:key="index">
-          <view class="box-l">
-            <image src="{{item.img}}" class="img"></image>
+      <view class="main-content">
+        <view class="content-item" wx:for="{{mainContent}}" wx:key="index">
+          <view class="title">
+            {{item.title}}
           </view>
-          <view class="box-r">
-            <view>
-              <view class="book-title">{{item.title}}</view>
-              <view class="book-desc">{{item.desc}}</view>
+          <view class="content" wx:for="{{item.books}}" wx:key="index" wx:for-item="bookItem" bindtap="jumpBook" data-id="{{bookItem._id}}">
+            <view class="box-l">
+              <image src="{{bookItem.img}}" class="img"></image>
             </view>
-            
-            <view class="author">
-              <text class="author-l">{{item.author}}</text>
-              <view class="aurhot-r">
-                <text class="update-time">两天前</text>
-                <text class="category">后端开发</text>
-                <text class="many">{{item.looknums}}</text>
+            <view class="box-r">
+              <view>
+                <view class="book-title">{{bookItem.title}}</view>
+                <view class="book-desc">{{bookItem.desc}}</view>
+              </view>
+              
+              <view class="author">
+                <text class="author-l">{{bookItem.author}}</text>
+                <view class="aurhot-r">
+                  <text class="update-time">两天前</text>
+                  <text class="category">后端开发</text>
+                  <text class="many">{{bookItem.looknums}}人喜欢</text>
+                </view>
               </view>
             </view>
           </view>
@@ -39,5 +41,21 @@
       </view>
     </view>
   </view>
+
+  <!-- 上拉加载 -->
+  <view wx:if="{{loadDone}}">
+    <view class="loading-more" hidden="{{!hasMore}}">
+      <image src="/static/img/loadMore.svg" class="loadmore-img"></image>
+      <text>正在拼命加载中</text>
+    </view>
+    <view class="no-more" hidden="{{hasMore}}">
+      <text class="no-more-text">我是有底线的</text>
+      <text class="line"></text>
+    </view>
+  </view>
 </view>
+
+
+
+
 
